--- a/app/src/main/res/layout/activity_local_vpn.xml
+++ b/app/src/main/res/layout/activity_local_vpn.xml
@@ -8,5 +8,18 @@
     <Button android:id="@+id/vpn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/start_vpn" />
+            android:text="@string/start_vpn"
+        android:onClick="buttonOnClick" />
+
+    <TextView
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vpn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/logOutput"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
