[layout] add scroll view

--- a/app/src/main/res/layout/activity_local_vpn.xml
+++ b/app/src/main/res/layout/activity_local_vpn.xml
@@ -11,9 +11,16 @@
             android:text="@string/start_vpn"
         android:onClick="buttonOnClick" />
 
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/vpn">
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vpn"
         android:layout_alignParentLeft="true"
@@ -22,4 +29,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true" />
+
+    </ScrollView>
 </RelativeLayout>
