--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.juliansparber.vpnMITM.startActivity">
+    tools:context="com.juliansparber.vpnMITM.InterceptorActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
